force-app/main/default/objects/User_Login_History__c/User_Login_History__c.object-meta.xml
<CustomObject>
    <label>User Login History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Login Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>