force-app/main/default/objects/User_Login_History__c/fields/Branch_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Short_Name__c</fullName>
    <formula>Branch_Team_Code__c + &quot;(&quot; +  
LEFT( Branch_Team_Name_Code__c , FIND(&quot;(&quot;, Branch_Team_Name_Code__c)-1)
+  &quot;)&quot;</formula>
    <label>Branch Short Name</label>
    <type>Text</type>
</CustomField>