force-app/main/default/objects/User_Login_History__c/fields/Branch_Team_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Team_Name_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch / Team Name (Code)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>