force-app/main/default/objects/User_Login_History__c/fields/CreateDate_Date__c.field-meta.xml
<CustomField>
    <fullName>CreateDate_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreateDate_Date</label>
    <type>Date</type>
</CustomField>