force-app/main/default/objects/User_Login_History__c/fields/Is_Match_My_Branch_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Is_Match_My_Branch_Rpt__c</fullName>
    <description>For Login report deploy on 24/7/2018</description>
    <formula>IF(Branch_Team_Name_Code__c = $User.RTL_Branch__c , true ,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Match My Branch</label>
    <type>Checkbox</type>
</CustomField>