force-app/main/default/objects/User_Login_History__c/fields/Is_Match_My_Zone_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Is_Match_My_Zone_Rpt__c</fullName>
    <description>For Login report deploy on 24/7/2018</description>
    <formula>IF( Zone_Code_Team_Code__c = $User.Zone_Code__c , true ,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Match My Zone</label>
    <type>Checkbox</type>
</CustomField>