force-app/main/default/objects/User_Login_History__c/fields/Is_User_in_My_Zone__c.field-meta.xml
<CustomField>
    <fullName>Is_User_in_My_Zone__c</fullName>
    <formula>IF(Zone_Code_Team_Code__c = $User.Zone_Code__c , true ,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User in My Zone</label>
    <type>Checkbox</type>
</CustomField>