force-app/main/default/objects/User_Login_History__c/fields/IsLogin__c.field-meta.xml
<CustomField>
    <fullName>IsLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Login</label>
    <type>Checkbox</type>
</CustomField>