force-app/main/default/objects/User_Login_History__c/fields/Region_Group__c.field-meta.xml
<CustomField>
    <fullName>Region_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region / Group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>