force-app/main/default/objects/User_Login_History__c/fields/Region_Zone_Branch_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Region_Zone_Branch_Rpt__c</fullName>
    <formula>Region_Short_Name__c + &quot;-&quot; + Zone_Branch_Rpt__c</formula>
    <label>Region-Zone-Branch</label>
    <type>Text</type>
</CustomField>