force-app/main/default/objects/User_Login_History__c/fields/Reporting_Segment__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reporting Segment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>