force-app/main/default/objects/User_Login_History__c/fields/Sale_Employee_ID_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Sale_Employee_ID_Rpt__c</fullName>
    <formula>Name + &quot;(&quot; + Employee_ID__c + &quot;)&quot;</formula>
    <label>Sale (Employee ID)</label>
    <type>Text</type>
</CustomField>