force-app/main/default/objects/User_Login_History__c/fields/Test_Only__c.field-meta.xml
<CustomField>
    <fullName>Test_Only__c</fullName>
    <formula>LEN( Branch_Team_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Only</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>