force-app/main/default/objects/User_Login_History__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Username</label>
    <length>200</length>
    <type>Text</type>
</CustomField>