force-app/main/default/objects/User_Login_History__c/fields/Zone_Team__c.field-meta.xml
<CustomField>
    <fullName>Zone_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone/Team</label>
    <length>200</length>
    <type>Text</type>
</CustomField>