force-app/main/default/objects/User_Login_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_ID__c</columns>
    <columns>Date__c</columns>
    <columns>IsLogin__c</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>